<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>egm_joint_state_to_mqtt_controller</name>
  <version>0.5.0</version>
  <description>The egm_joint_state_to_mqtt_controller package</description>

  <maintainer email="enric@todo.todo">enric</maintainer>
  <license>TODO</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>drapebot_mqtt_client</depend>

  <exec_depend>controller_manager</exec_depend>
  
  <export>
    <controller_interface plugin="${prefix}/egm_joint_state_to_mqtt_controller_plugin.xml"/>
  </export>
</package>
