<?xml version="1.0"?>
<package format="2">
  <name>mqtt_to_joint_position_controller</name>
  <version>0.0.0</version>
  <description>The mqtt_to_joint_position_controller package</description>

  <maintainer email="enric@todo.todo">enric</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <depend>controller_interface</depend>
  <depend>drapebot_mqtt_client</depend>
  <export>
    <controller_interface plugin="${prefix}/mqtt_to_joint_position_controller_plugin.xml"/>
  </export>
</package>
